--- a/index.html
+++ b/index.html
@@ -5,8 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenziegram</title>
+
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="linha">
+                <div class="linha__coluna linha__coluna--esquerda">
+                    <a href="#">
+                        <figure>
+                            <img src="./assets/img/logo.svg" alt="Logo Kenziegram">
+                            <figcaption class="hidden">Logo Kenziegram</figcaption>
+                        </figure>
+                    </a>
+                </div>
+                <div class="linha__coluna linha__coluna--direita">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="./assets/img/home.svg" alt="Icone home"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/img/message.svg" alt="Icone mensagem"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/img/explore.svg" alt="Icone explore"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/img/notification.svg" alt="Icone notificações"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/img/profile.svg" alt="Icone perfil"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <article>
+            <div class="container">
+                <section class="secaoSobreUsuario">
+                    <div class="linha">
+                        <div class="linha__coluna linha__coluna--esquerda">
+                            <figure>
+                                <img src="./assets/img/profile-pic.png" alt="Foto perfil usuário">
+                                <figcaption class="hidden">Foto perfil usuário</figcaption>
+                            </figure>
+                        </div>
+                        <div class="linha__coluna linha__coluna--direita">
+                            <article class="sobreUsuario">
+                                <div class="sobreUsuario__nome">
+                                    <h2>kenzieacademybr</h2>
+                                    <button>Enviar mensagem</button>
+                                </div>
+                                <div class="sobreUsuario__seguidores">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <strong>540</strong> publicações
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <strong>27,2mil</strong> seguidores
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <strong>269</strong> seguindo
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="sobreUsuario__descricao">
+                                    <h3>Kenzie Academy Brasil</h3>
+                                    <p>Transforme sua vida com o curso de programação full stack da Kenzie. Comece agora sua carreira na tecnologia e pague só quando estiver trabalhando.</p>
+                                    <p><a href="#">linktr.ee/kenzieacademybr</a></p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="secaoDestaquesUsuario">
+                    <ul>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/lancamento.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>Lançamentos</h3>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/kenzie.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>A Kenzie</h3>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/projetos.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>Projetos</h3>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/namidia.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>#NaMídia</h3>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/blog.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>Blog Kenzie</h3>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/img/estudantes.png" alt="Imagem destaque">
+                                <figcaption class="hidden">Imagem destaque</figcaption>
+                            </figure>
+                            <h3>Estudantes</h3>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </article>
+    </main>
 </body>
 </html>
